--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Bendev's blog"
-title_separator          : "-"
+title                    : "Bendev blog"
+title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Bendev"
 description              : "."
@@ -292,3 +292,6 @@ defaults:
       comments: # true
       share: # true
       related: true
+      show_date: true
+
+date_format: "%Y-%m-%d"
