--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
-search_provider          : # lunr (default), algolia, google
+search                   : true #, false (default)
+search_full_content      : # true #, false (default)
+search_provider          : lunr (default) #, algolia, google
 lunr:
   search_within_pages    : # true, false (default)
 algolia:
@@ -285,10 +285,11 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: # true
-      share: # true
+      share: true
       related: true
       show_date: true
 
+timezone: Asia/Seoul
 date_format: "%Y-%m-%d"
